# tju_rllab_realman_lyt

./: .gitignore  =4.0  README.md  curobo_test.py  imgui.ini  invert_transform.py  test1.py  test2.py  架构设计草案.md
.codex/: auth.json  config.toml
curobo/: CUROBO使用指南.md
demo/: readme.md
demo_new/: README.md
pick_and_place/: ex_history.json  pick_and_place.py  pick_and_place_developing.py  pick_and_place_developing2.py  pick_and_place_utils.py  pointing_vllm_client.py  pointing_vllm_get_point_utils.py  pointing_vllm_get_point_utils_developing.py
pick_and_place_old/: pick_and_place_2_1.py  pick_and_place_2（siu 版，还在改）.py  pick_and_place_utils.py  test_er_check.py
rllab_urdfs/RM75+gripper/crt_ctag2f90d_gripper_visualization/: CMakeLists.txt  package.xml  urdf.rviz
rllab_urdfs/RM75+gripper/crt_ctag2f90d_gripper_visualization/config/: joint_names_crt_ctag2f90d_visualization.yaml
rllab_urdfs/RM75+gripper/crt_ctag2f90d_gripper_visualization/docs/: README.md  README.zh-CN.md
rllab_urdfs/RM75+gripper/crt_ctag2f90d_gripper_visualization/launch/: display.launch
rllab_urdfs/RM75+gripper/crt_ctag2f90d_gripper_visualization/meshes/: Left_1_Link.STL  Left_2_Link.STL  Left_2_Link.STL.convex.stl  Left_Support_Link.STL  Left_Support_Link.STL.convex.stl  Right_1_Link.STL  Right_2_Link.STL  Right_2_Link.STL.convex.stl  Right_Support_Link.STL  Right_Support_Link.STL.convex.stl  base_link.STL  base_link.STL.convex.stl
rllab_urdfs/RM75+gripper/crt_ctag2f90d_gripper_visualization/urdf/: crt_ctag2f90d_gripper_visualization.csv  crt_ctag2f90d_gripper_visualization_sync.urdf
(+223 files in other folders)
